lab04/build/log/idf_py_stdout_output_40516
Command: ninja all
[1/30] Linking C static library esp-idf/esp_driver_gpio/libesp_driver_gpio.a
[2/30] Linking C static library esp-idf/esp_security/libesp_security.a
[3/30] Linking C static library esp-idf/esp_timer/libesp_timer.a
[4/30] Linking C static library esp-idf/esp_hal_timg/libesp_hal_timg.a
[5/30] Performing build step for 'bootloader'
[1/1] cd /project/lab04/build/bootloader && /opt/esp/python_env/idf6.0_py3.12_env/bin/python /opt/esp/idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /project/lab04/build/bootloader/bootloader.bin
Bootloader binary size 0x66b0 bytes. 0x950 bytes (8%) free.
[6/30] No install step for 'bootloader'
[7/30] Completed 'bootloader'
[8/30] Linking C static library esp-idf/efuse/libefuse.a
[9/30] Building C object esp-idf/joy/CMakeFiles/__idf_joy.dir/joy.c.obj
FAILED: esp-idf/joy/CMakeFiles/__idf_joy.dir/joy.c.obj 
ccache /opt/esp/tools/xtensa-esp-elf/esp-15.2.0_20250920/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-2810-g800f141f94\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/project/lab04/build/config -I/project/components/joy -I/opt/esp/idf/components/esp_libc/platform_include -I/opt/esp/idf/components/freertos/config/include -I/opt/esp/idf/components/freertos/config/include/freertos -I/opt/esp/idf/components/freertos/config/xtensa/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/opt/esp/idf/components/freertos/esp_additions/include -I/opt/esp/idf/components/esp_hw_support/include -I/opt/esp/idf/components/esp_hw_support/include/soc -I/opt/esp/idf/components/esp_hw_support/dma/include -I/opt/esp/idf/components/esp_hw_support/ldo/include -I/opt/esp/idf/components/esp_hw_support/debug_probe/include -I/opt/esp/idf/components/esp_hw_support/etm/include -I/opt/esp/idf/components/esp_hw_support/mspi_timing_tuning/include -I/opt/esp/idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/opt/esp/idf/components/esp_hw_support/power_supply/include -I/opt/esp/idf/components/esp_hw_support/modem/include -I/opt/esp/idf/components/esp_hw_support/port/esp32/. -I/opt/esp/idf/components/esp_hw_support/port/esp32/include -I/opt/esp/idf/components/heap/include -I/opt/esp/idf/components/heap/tlsf -I/opt/esp/idf/components/log/include -I/opt/esp/idf/components/soc/include -I/opt/esp/idf/components/soc/esp32 -I/opt/esp/idf/components/soc/esp32/include -I/opt/esp/idf/components/soc/esp32/register -I/opt/esp/idf/components/hal/platform_port/include -I/opt/esp/idf/components/hal/esp32/include -I/opt/esp/idf/components/hal/include -I/opt/esp/idf/components/esp_rom/include -I/opt/esp/idf/components/esp_rom/esp32/include -I/opt/esp/idf/components/esp_rom/esp32/include/esp32 -I/opt/esp/idf/components/esp_rom/esp32 -I/opt/esp/idf/components/esp_common/include -I/opt/esp/idf/components/esp_system/include -I/opt/esp/idf/components/esp_system/port/soc -I/opt/esp/idf/components/esp_system/port/include/private -I/opt/esp/idf/components/xtensa/esp32/include -I/opt/esp/idf/components/xtensa/include -I/opt/esp/idf/components/xtensa/deprecated_include -I/opt/esp/idf/components/esp_adc/include -I/opt/esp/idf/components/esp_adc/interface -I/opt/esp/idf/components/esp_adc/esp32/include -I/project/components/config -mlongcalls -Wno-frame-address -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=/project/lab04=. -fmacro-prefix-map=/opt/esp/idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/joy/CMakeFiles/__idf_joy.dir/joy.c.obj -MF esp-idf/joy/CMakeFiles/__idf_joy.dir/joy.c.obj.d -o esp-idf/joy/CMakeFiles/__idf_joy.dir/joy.c.obj -c /project/components/joy/joy.c
/project/components/joy/joy.c: In function 'joy_init':
/project/components/joy/joy.c:39:54: error: passing argument 3 of 'adc_oneshot_read' from incompatible pointer type [-Wincompatible-pointer-types]
   39 |         adc_oneshot_read(adc1_handle, ADC_CHANNEL_6, &adc_x);
      |                                                      ^~~~~~
      |                                                      |
      |                                                      int32_t * {aka long int *}
In file included from /project/components/joy/joy.c:1:
/opt/esp/idf/components/esp_adc/include/esp_adc/adc_oneshot.h:89:87: note: expected 'int *' but argument is of type 'int32_t *' {aka 'long int *'}
   89 | esp_err_t adc_oneshot_read(adc_oneshot_unit_handle_t handle, adc_channel_t chan, int *out_raw);
      |                                                                                  ~~~~~^~~~~~~
/project/components/joy/joy.c:40:54: error: passing argument 3 of 'adc_oneshot_read' from incompatible pointer type [-Wincompatible-pointer-types]
   40 |         adc_oneshot_read(adc1_handle, ADC_CHANNEL_7, &adc_y);
      |                                                      ^~~~~~
      |                                                      |
      |                                                      int32_t * {aka long int *}
/opt/esp/idf/components/esp_adc/include/esp_adc/adc_oneshot.h:89:87: note: expected 'int *' but argument is of type 'int32_t *' {aka 'long int *'}
   89 | esp_err_t adc_oneshot_read(adc_oneshot_unit_handle_t handle, adc_channel_t chan, int *out_raw);
      |                                                                                  ~~~~~^~~~~~~
In file included from /opt/esp/idf/components/esp_adc/include/esp_adc/adc_oneshot.h:11:
/project/components/joy/joy.c: In function 'joy_get_displacement':
/project/components/joy/joy.c:75:66: error: passing argument 3 of 'adc_oneshot_read' from incompatible pointer type [-Wincompatible-pointer-types]
   75 |     ESP_ERROR_CHECK(adc_oneshot_read(adc1_handle, ADC_CHANNEL_6, &adc_x));
      |                                                                  ^~~~~~
      |                                                                  |
      |                                                                  int32_t * {aka long int *}
/opt/esp/idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/opt/esp/idf/components/esp_adc/include/esp_adc/adc_oneshot.h:89:87: note: expected 'int *' but argument is of type 'int32_t *' {aka 'long int *'}
   89 | esp_err_t adc_oneshot_read(adc_oneshot_unit_handle_t handle, adc_channel_t chan, int *out_raw);
      |                                                                                  ~~~~~^~~~~~~
/project/components/joy/joy.c:76:66: error: passing argument 3 of 'adc_oneshot_read' from incompatible pointer type [-Wincompatible-pointer-types]
   76 |     ESP_ERROR_CHECK(adc_oneshot_read(adc1_handle, ADC_CHANNEL_7, &adc_y));
      |                                                                  ^~~~~~
      |                                                                  |
      |                                                                  int32_t * {aka long int *}
/opt/esp/idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/opt/esp/idf/components/esp_adc/include/esp_adc/adc_oneshot.h:89:87: note: expected 'int *' but argument is of type 'int32_t *' {aka 'long int *'}
   89 | esp_err_t adc_oneshot_read(adc_oneshot_unit_handle_t handle, adc_channel_t chan, int *out_raw);
      |                                                                                  ~~~~~^~~~~~~
[10/30] Linking C static library esp-idf/esp_partition/libesp_partition.a
ninja: build stopped: subcommand failed.
